tests/invalid/Template_Invalid_20.whiley
method f<T>(T x) -> (bool y):
    return false

type t is (int x) where f(x)
